Mcts fixed + Mcts prunning (not working)